fixed overflow in footer

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -12,6 +12,9 @@
     padding-top: 65px;
     padding-bottom: 16px;
   }
+  .footer {
+    overflow-y: hidden;
+  }
 }
 
 /* BLUR */
